[gd_scene load_steps=24 format=3 uid="uid://nm0w0yqxo1k3"]

[ext_resource type="Shader" path="res://Shaders/background.gdshader" id="1_2umnk"]
[ext_resource type="Script" path="res://Scripts/UIController.gd" id="1_hhfyu"]
[ext_resource type="Theme" uid="uid://ct6c5locyme11" path="res://Scenes/main.tres" id="2_8cqcx"]
[ext_resource type="Texture2D" uid="uid://dhrmuxmi5xh3m" path="res://Art/reticle.png" id="2_mwa8p"]
[ext_resource type="Script" path="res://Scripts/CameraController.gd" id="2_ok7kf"]
[ext_resource type="Script" path="res://Scripts/ReticleController.gd" id="3_7rstr"]
[ext_resource type="Texture2D" uid="uid://ckfuxnpotqr3f" path="res://Art/2D Lights and Shadows Godot 4.4.webp" id="3_o3ep3"]
[ext_resource type="Script" path="res://Scripts/PlayerController.gd" id="4_5x65x"]
[ext_resource type="Script" path="res://Scripts/LevelPolygon.gd" id="4_288rl"]
[ext_resource type="Script" path="res://Scripts/RoomAreaController.gd" id="5_fn3gd"]
[ext_resource type="Shape2D" uid="uid://62j6bwm8ceuu" path="res://169rect.tres" id="6_ruafo"]
[ext_resource type="Script" path="res://Scripts/DisappearingPolygon.gd" id="7_jv8k4"]
[ext_resource type="Texture2D" uid="uid://csbmychwfa3r1" path="res://Art/circle.png" id="7_mrs78"]
[ext_resource type="PackedScene" uid="uid://catbl3tltfboe" path="res://Scenes/npc.tscn" id="7_yruwv"]
[ext_resource type="Texture2D" uid="uid://dk33chuwhm2ux" path="res://Art/pointlighttexture.tres" id="8_5dej1"]
[ext_resource type="SpriteFrames" uid="uid://bnwcsx30oc8bi" path="res://Art/frogSpriteFrames.tres" id="8_6lftg"]

[sub_resource type="Environment" id="Environment_susy2"]
background_mode = 3
tonemap_mode = 2
tonemap_white = 16.0
glow_enabled = true
glow_intensity = 0.47
glow_bloom = 0.7
adjustment_enabled = true
adjustment_brightness = 1.12
adjustment_contrast = 1.18
adjustment_saturation = 1.19

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b32nj"]
shader = ExtResource("1_2umnk")
shader_parameter/color1 = Color(0.6764, 0.80456, 0.89, 1)
shader_parameter/color2 = Color(0.258824, 0.231373, 0.341176, 1)
shader_parameter/color3 = Color(0.0666667, 0.529412, 0.670588, 1)
shader_parameter/color4 = Color(0, 0.298039, 0.541176, 1)
shader_parameter/timeScale = 2.08165e-12
shader_parameter/resolution = Vector2(300, 200)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_tn783"]
cull_mode = 2
polygon = PackedVector2Array(-3153, 2819, 570, 2724, 1689, 2838, 2997, 2878, 4551, 2841, 6436, 2204, 5822, 1065, 4063, 1076, 3639, 1268, 3371, 1431, 3172, 1499, 3152, 1538, 3266, 1578, 3354, 1552, 3494, 1773, 3389, 1862, 3415, 2089, 3386, 2121, 2898, 2165, 2539, 1873, 2547, 1818, 2870, 1729, 3079, 1788, 3144, 1704, 3082, 1658, 2987, 1626, 2914, 1148, 2851, 1112, 2140, 1219, 1502, 1132, 1050, 1033, 241, 1031, -194, 1132, -841, 1162, -1065, 1174, -1339, 1255, -1502, 1238, -1577, 1118, -1484, 1049, -1350, 957, -1228, 896, -1180, 899, -1073, 1028, -854, 1052, -684, 936, -293, 894, -291, 857, -445, 803, -606, 760, -809, 693, -862.098, 692.617, -1010, 767, -1398, 737, -1614, 767, -1785, 645, -1779, 584, -1579, 490, -1202, 558, -831, 531, -702, 432, -593, 325, -578, 108, -295, 131, -84, 74, -82, 54, -655, -57, -713, -54, -1016, 7, -1173, 4, -1476, -207, -1462, -276, -1078, -533, -1011, -530, -537, -171, -465, -168, 233, -397, 618, -430, 1020, -450, 1425, -397, 1646, -384, 1674, -346, 1590, -167, 1502, -124, 1386, -127, 1111, -240, 1035, -240, 951, -187, 863, -64, 719, 12, 601, 26, 483, 91, 299, 186, -166, 417, -297, 413, -400, 431, -399, 455, -219, 515, 347, 557, 902, 241, 1596, 74, 2055, 262, 2426, -543, 3574, -671, 4542, -339, 5162, -431, 6450, -499, 5194, -1155, 2000, -1131, -1973, -1121, -3684, 784)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_om0rq"]
cull_mode = 2
polygon = PackedVector2Array(180, 41, 415, 17, 444, 85, 183, 246, -19, 289, -47, 265, -7, 145, -75, 62, -69, 42, 9, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_fhpe3"]
radius = 256.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nyt3n"]
radius = 7.15891

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v0lyo"]
size = Vector2(10, 10)

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_hhfyu")

[node name="DialogueLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 72.0
offset_top = 77.0
offset_right = 113.0
offset_bottom = 117.0
theme = ExtResource("2_8cqcx")
text = "Bro it is way too wet in this cave..."
scroll_active = false
autowrap_mode = 2

[node name="ReticleController" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(230, 2.1684e-19)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_mwa8p")
script = ExtResource("3_7rstr")
highlightedColor = Color(0.878431, 0.494118, 0.858824, 1)
normalColor = Color(0.207843, 0.670588, 0.501961, 1)
highlightedScale = 0.15
normalScale = 0.1
pressedDownScale = 0.08

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(36, -224)
color = Color(0.3843, 0.576765, 0.63, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_susy2")

[node name="Level0" type="Node2D" parent="."]

[node name="Background" type="Polygon2D" parent="Level0"]
z_index = -1000
material = SubResource("ShaderMaterial_b32nj")
position = Vector2(36, -224)
polygon = PackedVector2Array(-7827, -5454, -4437, 5154, 14567, 5159, 14439, -5993)

[node name="LevelGeometry" type="Node2D" parent="Level0"]

[node name="Border" type="Polygon2D" parent="Level0/LevelGeometry"]
position = Vector2(16, -217)
color = Color(0.1537, 0.1537, 0.29, 1)
polygon = PackedVector2Array(-3153, 2819, 570, 2724, 1689, 2838, 2997, 2878, 4551, 2841, 6436, 2204, 5822, 1065, 4063, 1076, 3639, 1268, 3371, 1431, 3172, 1499, 3152, 1538, 3266, 1578, 3354, 1552, 3494, 1773, 3389, 1862, 3415, 2089, 3386, 2121, 2898, 2165, 2539, 1873, 2547, 1818, 2870, 1729, 3079, 1788, 3144, 1704, 3082, 1658, 2987, 1626, 2914, 1148, 2851, 1112, 2140, 1219, 1502, 1132, 1050, 1033, 241, 1031, -194, 1132, -841, 1162, -1065, 1174, -1339, 1255, -1502, 1238, -1577, 1118, -1484, 1049, -1350, 957, -1228, 896, -1180, 899, -1073, 1028, -854, 1052, -684, 936, -293, 894, -291, 857, -445, 803, -606, 760, -809, 693, -862.098, 692.617, -1010, 767, -1398, 737, -1614, 767, -1785, 645, -1779, 584, -1579, 490, -1202, 558, -831, 531, -702, 432, -593, 325, -578, 108, -295, 131, -84, 74, -82, 54, -655, -57, -713, -54, -1016, 7, -1173, 4, -1476, -207, -1462, -276, -1078, -533, -1011, -530, -537, -171, -465, -168, 233, -397, 618, -430, 1020, -450, 1425, -397, 1646, -384, 1674, -346, 1590, -167, 1502, -124, 1386, -127, 1111, -240, 1035, -240, 951, -187, 863, -64, 719, 12, 601, 26, 483, 91, 299, 186, -166, 417, -297, 413, -400, 431, -399, 455, -219, 515, 347, 557, 902, 241, 1596, 74, 2055, 262, 2426, -543, 3574, -671, 4542, -339, 5162, -431, 6450, -499, 5194, -1155, 2000, -1131, -1973, -1121, -3684, 784)
script = ExtResource("4_288rl")

[node name="StaticBody2D" type="StaticBody2D" parent="Level0/LevelGeometry/Border"]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level0/LevelGeometry/Border/StaticBody2D"]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)
polygon = PackedVector2Array(-3153, 2819, 570, 2724, 1689, 2838, 2997, 2878, 4551, 2841, 6436, 2204, 5822, 1065, 4063, 1076, 3639, 1268, 3371, 1431, 3172, 1499, 3152, 1538, 3266, 1578, 3354, 1552, 3494, 1773, 3389, 1862, 3415, 2089, 3386, 2121, 2898, 2165, 2539, 1873, 2547, 1818, 2870, 1729, 3079, 1788, 3144, 1704, 3082, 1658, 2987, 1626, 2914, 1148, 2851, 1112, 2140, 1219, 1502, 1132, 1050, 1033, 241, 1031, -194, 1132, -841, 1162, -1065, 1174, -1339, 1255, -1502, 1238, -1577, 1118, -1484, 1049, -1350, 957, -1228, 896, -1180, 899, -1073, 1028, -854, 1052, -684, 936, -293, 894, -291, 857, -445, 803, -606, 760, -809, 693, -862.098, 692.617, -1010, 767, -1398, 737, -1614, 767, -1785, 645, -1779, 584, -1579, 490, -1202, 558, -831, 531, -702, 432, -593, 325, -578, 108, -295, 131, -84, 74, -82, 54, -655, -57, -713, -54, -1016, 7, -1173, 4, -1476, -207, -1462, -276, -1078, -533, -1011, -530, -537, -171, -465, -168, 233, -397, 618, -430, 1020, -450, 1425, -397, 1646, -384, 1674, -346, 1590, -167, 1502, -124, 1386, -127, 1111, -240, 1035, -240, 951, -187, 863, -64, 719, 12, 601, 26, 483, 91, 299, 186, -166, 417, -297, 413, -400, 431, -399, 455, -219, 515, 347, 557, 902, 241, 1596, 74, 2055, 262, 2426, -543, 3574, -671, 4542, -339, 5162, -431, 6450, -499, 5194, -1155, 2000, -1131, -1973, -1121, -3684, 784)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Level0/LevelGeometry/Border"]
occluder = SubResource("OccluderPolygon2D_tn783")

[node name="Rock1" type="Polygon2D" parent="Level0/LevelGeometry"]
position = Vector2(3193, 841)
color = Color(0.1537, 0.1537, 0.29, 1)
antialiased = true
polygon = PackedVector2Array(180, 41, 415, 17, 444, 85, 183, 246, -19, 289, -47, 265, -7, 145, -75, 62, -69, 42, 9, 20)
script = ExtResource("4_288rl")

[node name="StaticBody2D" type="StaticBody2D" parent="Level0/LevelGeometry/Rock1"]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level0/LevelGeometry/Rock1/StaticBody2D"]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)
polygon = PackedVector2Array(180, 41, 415, 17, 444, 85, 183, 246, -19, 289, -47, 265, -7, 145, -75, 62, -69, 42, 9, 20)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Level0/LevelGeometry/Rock1"]
occluder = SubResource("OccluderPolygon2D_om0rq")

[node name="FalseWall" type="Polygon2D" parent="Level0/LevelGeometry"]
z_index = 10
position = Vector2(-1718, 335)
color = Color(0.1537, 0.1537, 0.29, 1)
polygon = PackedVector2Array(29, 166, -87, 143, -91, 19, 29, -25)
script = ExtResource("7_jv8k4")

[node name="Area2D" type="Area2D" parent="Level0/LevelGeometry/FalseWall"]
collision_layer = 8
collision_mask = 18

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level0/LevelGeometry/FalseWall/Area2D"]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)
polygon = PackedVector2Array(29, 166, -87, 143, -91, 19, 29, -25)

[node name="Polygon2D" type="Polygon2D" parent="Level0/LevelGeometry"]

[node name="NPCs" type="Node2D" parent="Level0"]

[node name="NPC" parent="Level0/NPCs" instance=ExtResource("7_yruwv")]

[node name="NPC2" parent="Level0/NPCs" instance=ExtResource("7_yruwv")]
position = Vector2(-1123, 478)
rotation = 0.0796554
dialogueLine = "Yooooo, what makes your roof so bouncy?"

[node name="NPC3" parent="Level0/NPCs" instance=ExtResource("7_yruwv")]
position = Vector2(-1005, -294)
rotation = 0.0123069
dialogueLine = "Grammy always said living on the top floor was the best. She was right!"

[node name="NPC4" parent="Level0/NPCs" instance=ExtResource("7_yruwv")]
position = Vector2(1434, -419)
rotation = 0.0123069
dialogueLine = "Oh! A visitor! I don't have any tea..."

[node name="NPC5" parent="Level0/NPCs" instance=ExtResource("7_yruwv")]
position = Vector2(2951, 1867)
rotation = 0.0123069
dialogueLine = "This is really not a place you wanna be."

[node name="Lights" type="Node2D" parent="Level0"]

[node name="PointLight2D" type="PointLight2D" parent="Level0/Lights"]
position = Vector2(185, -308)
energy = 0.31
shadow_enabled = true
texture = ExtResource("8_5dej1")
texture_scale = 50.0

[node name="PointLight2D2" type="PointLight2D" parent="Level0/Lights"]
position = Vector2(2473, 271)
energy = 0.33
shadow_enabled = true
texture = ExtResource("8_5dej1")
texture_scale = 50.0

[node name="PointLight2D3" type="PointLight2D" parent="Level0/Lights"]
position = Vector2(5121, 307)
energy = 0.33
shadow_enabled = true
texture = ExtResource("8_5dej1")
texture_scale = 50.0

[node name="PointLight2D4" type="PointLight2D" parent="Level0/Lights"]
position = Vector2(581, 515)
energy = 0.33
shadow_enabled = true
texture = ExtResource("8_5dej1")
texture_scale = 18.4

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1318, 854)
zoom = Vector2(3.4, 3.4)
script = ExtResource("2_ok7kf")

[node name="RoomAreaParent" type="Node2D" parent="."]
visible = false

[node name="RoomArea1" type="Area2D" parent="RoomAreaParent"]
position = Vector2(-1355, 766)
collision_mask = 2
script = ExtResource("5_fn3gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomAreaParent/RoomArea1"]
position = Vector2(-658, 495)
scale = Vector2(148.39, 148.39)
shape = ExtResource("6_ruafo")

[node name="RoomArea2" type="Area2D" parent="RoomAreaParent"]
position = Vector2(-354, 766)
collision_mask = 2
script = ExtResource("5_fn3gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomAreaParent/RoomArea2"]
position = Vector2(575, -352)
scale = Vector2(129.47, 129.47)
shape = ExtResource("6_ruafo")

[node name="RoomArea3" type="Area2D" parent="RoomAreaParent"]
position = Vector2(-354, 766)
collision_mask = 2
script = ExtResource("5_fn3gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomAreaParent/RoomArea3"]
position = Vector2(2774, -367)
scale = Vector2(144.03, 144.03)
shape = ExtResource("6_ruafo")

[node name="RoomArea4" type="Area2D" parent="RoomAreaParent"]
position = Vector2(-354, 2846)
collision_mask = 2
script = ExtResource("5_fn3gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomAreaParent/RoomArea4"]
position = Vector2(3424, -1329.5)
scale = Vector2(101.882, 101.882)
shape = ExtResource("6_ruafo")

[node name="RoomArea5" type="Area2D" parent="RoomAreaParent"]
position = Vector2(-354, 2846)
collision_mask = 2
script = ExtResource("5_fn3gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomAreaParent/RoomArea5"]
position = Vector2(-989.25, -2556)
scale = Vector2(-65.3217, -65.3217)
shape = ExtResource("6_ruafo")

[node name="RoomArea6" type="Area2D" parent="RoomAreaParent"]
position = Vector2(-350, 1998)
collision_mask = 2
script = ExtResource("5_fn3gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomAreaParent/RoomArea6"]
position = Vector2(-794, -2527)
scale = Vector2(-75.2805, -75.2805)
shape = ExtResource("6_ruafo")

[node name="RoomArea7" type="Area2D" parent="RoomAreaParent"]
position = Vector2(-350, 1998)
collision_mask = 2
script = ExtResource("5_fn3gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomAreaParent/RoomArea7"]
position = Vector2(612, -2618)
scale = Vector2(-98.8415, -98.8415)
shape = ExtResource("6_ruafo")

[node name="RoomArea8" type="Area2D" parent="RoomAreaParent"]
position = Vector2(-350, 1998)
collision_mask = 2
script = ExtResource("5_fn3gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomAreaParent/RoomArea8"]
position = Vector2(1873, -2572)
scale = Vector2(-57.4454, -57.4454)
shape = ExtResource("6_ruafo")

[node name="PlayerController" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_5x65x")
airLateralAcceleration = 3.0
gravity = 10.0
grappleGravity = 10.0
maxFloorAngle = 1.3

[node name="GrappleLine" type="Line2D" parent="PlayerController"]
light_mask = 3
z_index = 1
points = PackedVector2Array(0, 0, 0, 0)
width = 3.0
default_color = Color(0.909767, 0.5586, 0.98, 1)

[node name="TrailLine" type="Line2D" parent="PlayerController"]
z_index = -1
position = Vector2(2.08165e-12, 2.08165e-12)
default_color = Color(0.2989, 0.61, 0.501115, 0.243137)
joint_mode = 2

[node name="DebugLine" type="Line2D" parent="PlayerController"]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0

[node name="Grapple" type="CharacterBody2D" parent="PlayerController"]
position = Vector2(269, -140)
scale = Vector2(0.02, 0.02)
collision_layer = 16
collision_mask = 11

[node name="Sprite2D" type="Sprite2D" parent="PlayerController/Grapple"]
modulate = Color(0.909767, 0.5586, 0.98, 1)
light_mask = 3
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.74, 1)
texture = ExtResource("7_mrs78")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerController/Grapple"]
shape = SubResource("CircleShape2D_fhpe3")

[node name="PlayerBody" type="CharacterBody2D" parent="PlayerController"]
position = Vector2(-439, 390)
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 5
slide_on_ceiling = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerController/PlayerBody"]
position = Vector2(0, -0.499999)
shape = SubResource("CircleShape2D_nyt3n")

[node name="GroundCast" type="ShapeCast2D" parent="PlayerController/PlayerBody"]
shape = SubResource("RectangleShape2D_v0lyo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerController/PlayerBody"]
z_index = 2
scale = Vector2(0.04, 0.04)
sprite_frames = ExtResource("8_6lftg")
animation = &"bounce"
autoplay = "idle"
speed_scale = 3.0

[node name="PointLight2D" type="PointLight2D" parent="PlayerController/PlayerBody"]
scale = Vector2(0.5, 0.5)
energy = 0.1
shadow_enabled = true
shadow_item_cull_mask = 2
texture = ExtResource("3_o3ep3")
texture_scale = 2.31

[node name="Node2D" type="Node2D" parent="PlayerController"]

[connection signal="clicked_on_grapple_area" from="CanvasLayer/ReticleController" to="PlayerController" method="_on_reticle_clicked_on_grapple_area"]
[connection signal="clicked_release_from_grapple_area" from="CanvasLayer/ReticleController" to="PlayerController" method="_on_clicked_release_from_grapple_area"]
